# Programmierung-rust

./: .gitignore
exercise0/: Cargo.toml
exercise0/src/: 2A.rs  2B  2B.rs  3  3.rs  main  main.rs
exercise1/src/: 3A.rs  main.rs
exercise2/: Cargo.toml
exercise2/src/: 2.rs  3.rs  main.rs
exercise3/: edited_library.json  library.json
exercise3/src/: main.rs
exercise3a/: Cargo.toml  library.json
exercise3a/src/: main.rs
exercise3b/: Cargo.toml
exercise3b/src/: colors  colors.rs  keyword_ref  keyword_ref.rs  main.rs
exercise4a/: Cargo.toml
exercise4a/src/: 1.rs  2-own-solution.rs  main.rs
exercise4b/: Cargo.toml
exercise4b/src/: main.rs
exercise5a/: Cargo.toml
exercise5a/src/: fibonacci_iterators.rs  main.rs
exercise5b/: Cargo.toml  library.json
exercise5b/src/: library.rs  main.rs
exercise7/src/: list_cmp  list_cmp.rs  single_cmp.rs
exercise8/: library.json
exercise8/src/: library.rs  main.rs
exercise8b/: Cargo.toml
exercise8b/src/: main.rs
